Refonte css du site

--- a/site/001-Front-end/MainMenuFrontEnd.html
+++ b/site/001-Front-end/MainMenuFrontEnd.html
@@ -9,7 +9,7 @@
 </head>
 <body class="container">
   <header class="bgc-header">
-    <nav aria-label="Breadcrumb" class="header-nav">
+    <nav aria-label="Breadcrumb" class="flex-end">
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
         <li><a href="../liens-utiles.html">Liens utiles</a></li>
@@ -18,21 +18,26 @@
       </ul>
     </nav>
   </header>
-  <main>
-    <nav>
-      <section class="return">
-        <h2 class="sub-title-h2">Front-End</h2>
-      </section>
-      <ol>
-        <li><a href="../01-HTML5_et_CSS3/MainMenuHtmlCss.html">HTML5 et CSS3</a></li>
-        <li><a href="initProgJSMenu2.html">Initiation à la programmation Javascript</a></li>
-        <li>
-          <a href="../03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">Dynamiser vos sites web avec 
-            Javascript
-          </a>
-        </li>
-      </ol>
-      </nav>
+  <main class="bgc-main margin-content">
+    <section class="card nav-summary txt-center">
+      <nav>
+        <section>
+          <h1 class="title-h1">Front-End</h1>
+        </section>
+        <ul>
+          <li><a href="../01-HTML5_et_CSS3/MainMenuHtmlCss.html">HTML5 et CSS3</a></li>
+          <li><a href="initProgJSMenu2.html">Initiation à la programmation Javascript</a></li>
+          <li>
+            <a href="../03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">Dynamiser vos sites web avec 
+              Javascript
+            </a>
+          </li>
+        </ul>
+        </nav>
+    </section>
   </main>
+  <footer class="bgc-footer">
+    <p>&copy;2021 - Graduate développeur PHP/Symfony</p>
+  </footer>
 </body>
 </html>
