--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../site/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
   <header class="bgc-header">
-    <nav aria-label="Breadcrumb" class="header-nav">
+    <nav aria-label="Breadcrumb" class="flex-end">
       <ul class="breadcrumb">
         <li><a href="../index.html">Accueil</a></li>
         <li class="active">Liens utiles</li>
@@ -18,18 +18,25 @@
       </ul>
     </nav>
   </header>
-<main>
-  <h2 class="sub-title-h2">Liens-utiles</h2>
-  <nav class="nav-summary">
-    <a href="https://developer.mozilla.org/fr/" target="_blank">MDN Web Docs</a>  
-    <a href="https://www.w3.org/" target="_blank">W3C</a>  
-    <a href="https://validator.w3.org/" target="_blank">W3C validator</a>  
-    <a href="http://ami.responsivedesign.is/" target="_blank">am-i-reponsive</a>  
-    <a href="https://caniuse.com/" target="_blank">Can I use ?</a>  
-    <a href="https://fonts.google.com/" target="_blank">Google Fonts</a>  
-    <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>  
-    <a href="https://meyerweb.com/eric/tools/css/reset/" target="_blank">Reset CSS de Eric Meyer</a>  
-  </nav>
+<main class="bgc-main margin-content">
+  <section class="card nav-summary txt-center">
+    <h1 class="title-h1 txt-center">Liens-utiles</h1>
+    <nav>
+      <ul>
+        <li><a href="https://developer.mozilla.org/fr/" target="_blank">MDN Web Docs</a></li>
+        <li><a href="https://www.w3.org/" target="_blank">W3C</a></li>
+        <li><a href="https://validator.w3.org/" target="_blank">W3C validator</a></li>
+        <li><a href="http://ami.responsivedesign.is/" target="_blank">am-i-reponsive</a></li>
+        <li><a href="https://caniuse.com/" target="_blank">Can I use ?</a></li>
+        <li><a href="https://fonts.google.com/" target="_blank">Google Fonts</a></li>
+        <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
+        <li><a href="https://meyerweb.com/eric/tools/css/reset/" target="_blank">Reset CSS de Eric Meyer</a></li>
+      </ul>
+    </nav>
+  </section>
 </main>
+<footer class="bgc-footer">
+  <p>&copy;2021 - Graduate développeur PHP/Symfony</p>
+</footer>
 </body>
 </html>
