--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container">
   <header class="bgc-header">
-    <nav aria-label="Breadcrumb" class="header-nav">
+    <nav aria-label="Breadcrumb" class="flex-end">
       <ul class="breadcrumb">
         <li class="active">Accueil</li>
         <li><a href="site/liens-utiles.html">Liens utiles</a></li>
@@ -19,23 +19,22 @@
       </ul>
     </nav>
   </header>
-  <main>
-    <section class="summary-section">
+  <main class="bgc-main margin-content">
+    <section class="card nav-summary txt-center">
       <h1 class="title-h1">Plan</h1>
       <!-- <img class="img-logo" src="site/images/code.jpg" alt="Code"> -->
-      <ul>
-        <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
-        <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Front-End</a></li>
-        <li><a href= "#">Back-End</a></li>
-        <li><a href= "site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
-        <li><a href= "site/lexique.html">lexique</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
+          <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Front-End</a></li>
+          <li><a href= "#">Back-End</a></li>
+          <li><a href= "site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
+          <li><a href= "site/lexique.html">lexique</a></li>
+        </ul>
+      </nav>
     </section>
-    <aside>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem, voluptatem? Earum, neque? Repellat, quidem, rerum recusandae atque suscipit, labore iure hic quos voluptate aut nobis aliquid neque necessitatibus reprehenderit deleniti?</p>
-    </aside>
   </main>
-  <footer>
+  <footer class="bgc-footer">
     <p>&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
 </body>
