Add link to Github in liens-utiles.html

--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -31,6 +31,7 @@
         <li><a href="https://fonts.google.com/" target="_blank">Google Fonts</a></li>
         <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
         <li><a href="https://meyerweb.com/eric/tools/css/reset/" target="_blank">Reset CSS de Eric Meyer</a></li>
+        <li><a href="https://github.com/" target="_blank">Github</a></li>
       </ul>
     </nav>
   </section>
