Add ressources folder.

--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -32,6 +32,10 @@
         <li><a href="https://getbootstrap.com/" target="_blank">Bootstrap</a></li>
         <li><a href="https://meyerweb.com/eric/tools/css/reset/" target="_blank">Reset CSS de Eric Meyer</a></li>
         <li><a href="https://github.com/" target="_blank">Github</a></li>
+        <li><a href="http://cours.pise.info/algo/codage.htm" target="_blank">Cours d'algorithmique et de programmation</a></li>
+        <li><a href="https://www.opquast.com/" target="_blank">Certification Opquast (Rendre le web meilleur)</a></li>
+        <li><a href="https://www.lafabriquedunet.fr/thematique/cahier-charges-site-web/" target="_blank">La fabrique du Net</a></li>
+        <li><a href="../site/ressources/LaFabriqueduNet_Cahier_des_charges_de_site_internet.docx" target="_blank">Modèle de CdC de La fabrique du Net</a></li>
       </ul>
     </nav>
   </section>
