--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="site/liens-utiles.html">Liens utiles</a></li>
         <li><a href="site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="#">Back-end</a></li>
+        <li><a href="site/003-Git_et_Github/git.html">Git et Github</a></li>
       </ul>
     </nav>
   </header>
@@ -28,6 +29,7 @@
           <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
           <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Front-End</a></li>
           <li><a href= "#">Back-End</a></li>
+          <li><a href= "site/003-Git_et_Github/git.html">Git et Github</a></li>
           <li><a href= "site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
           <li><a href= "site/lexique.html">lexique</a></li>
         </ul>
