--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -15,6 +15,7 @@
         <li class="active">Liens utiles</li>
         <li><a href="001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="#">Back-end</a></li>
+        <li><a href="site/003-Git_et_Github/git.html">Git et Github</a></li>
       </ul>
     </nav>
   </header>
