Rename git.html > mainMenuGit.html

--- a/site/003-Git_et_Github/mainMenuGit.html
+++ b/site/003-Git_et_Github/mainMenuGit.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <title>Graduate développeur PHP/Symfony</title>
 </head>
-<body>
+<body class="container">
   <header class="bgc-header">
     <nav aria-label="Breadcrumb" class="flex-end">
       <ul class="breadcrumb">
@@ -18,4 +18,8 @@
         <li class="active">Git et Github</li>
       </ul>
     </nav>
+  <footer class="bgc-footer">
+    <p>&copy;2021 - Graduate développeur PHP/Symfony</p>
+  </footer>
 </body>
+</html> 
