--- a/site/001-Front-end/MainMenuFrontEnd.html
+++ b/site/001-Front-end/MainMenuFrontEnd.html
@@ -15,6 +15,7 @@
         <li><a href="../liens-utiles.html">Liens utiles</a></li>
         <li class="active">Front-end</li>
         <li><a href="#">Back-end</a></li>
+        <li><a href="../003-Git_et_Github/git.html">Git et Github</a></li>
       </ul>
     </nav>
   </header>
