Add installGit.html file

--- a/site/003-Git_et_Github/mainMenuGit.html
+++ b/site/003-Git_et_Github/mainMenuGit.html
@@ -18,6 +18,19 @@
         <li class="active">Git et Github</li>
       </ul>
     </nav>
+  </header>
+  <main class="bgc-main margin-content">
+    <section class="card nav-summary txt-center">
+      <nav>
+        <section>
+          <h1 class="title-h1">Git et Github</h1>
+        </section>
+        <ul>
+          <li><a href="../01-HTML5_et_CSS3/MainMenuHtmlCss.html">Installation de Git</a></li>
+          </li>
+        </ul>
+        </nav>
+    </section>  </main>
   <footer class="bgc-footer">
     <p>&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
