--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/form.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/form.html
@@ -9,24 +9,26 @@
   <link rel="stylesheet" href="../../style.css">
   <title>Notes - Graduate développeur PHP/Symfony</title>
 </head>
-<body>
-  <header id="up">
-    <h1 class="shape-title">Dynamiser vos sites web avec Javascript</h1>
-  </header>
-  <a href="dynSiteWebJSMenu.html" class="bgc-up">Retour</a>
-  <main>
-    <h2>Les formulaires HTML et JavaScript</h2>
-    <nav>
-      <section class="return" >
-        <h2 class="sub-title-h2">Sommaire</h2>
-      </section>
-      <ul class="li-empty">
-        <li><a href="#manipText">Manipuler les champs de type texte</a></li>
-        <li><a href="#manipCheckbox">Manipuler les checkbox, radio et select</a></li>
+<body class="container">
+  <header class="bgc-header">
+    <nav aria-label="Breadcrumb" class="flex-end">
+      <ul class="breadcrumb">
+        <li><a href="../../index.html">Accueil</a></li>
+        <li><a href="../liens-utiles.html">Liens utiles</a></li>
+        <li class="active">Front-end</li>
+        <li><a href="#">Back-end</a></li>
+        <li><a href="../../003-Git_et_Github/mainMenuGit.html">Git et Github</a></li>
       </ul>
     </nav>
-    <section class="bgc-section">
-      <h2 id="manipText" class="sub-title-h3">Manipuler les champs de type texte</h2>
+  </header>
+  <main class="bgc-main margin-content">
+    <section class="card">
+      <div class="txt-center">
+        <h1 class="title-h1">Les formulaires HTML et JavaScript</h1>  
+        <p class="returnSummary"><a href="../003-Git_et_Github/mainMenuGit.html">Sommaire</a></p>
+      </div>
+    <section>
+      <h2 class="title-h2">Manipuler les champs de type texte</h2>
       <p>Le formulaire HTML étant en place, JavaScript va nous permettre d'interagir avec lui.</p>
       <article>
         <h3>Accès et modification de la valeur d'une zone de texte</h3>
