--- a/site/003-Git_et_Github/mainMenuGit.html
+++ b/site/003-Git_et_Github/mainMenuGit.html
@@ -26,7 +26,7 @@
           <h1 class="title-h1">Git et Github</h1>
         </section>
         <ul>
-          <li><a href="../01-HTML5_et_CSS3/MainMenuHtmlCss.html">Installation de Git</a></li>
+          <li><a href="installGit.html">Installation de Git</a></li>
           </li>
         </ul>
         </nav>
