--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/form.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/form.html
@@ -29,17 +29,16 @@
       </div>
     <section>
       <h2 class="title-h2">Manipuler les champs de type texte</h2>
-      <p>Le formulaire HTML étant en place, JavaScript va nous permettre d'interagir avec lui.</p>
       <article>
-        <h3>Accès et modification de la valeur d'une zone de texte</h3>
+        <h3 class="title-h3">Accéder à un champ texte</h3>
         <p>
           Pour accéder à la valeur d'un champ texte (text, textarea), utiliser la propriété 
           <code class="code-inline">value</code><br>
         </p>
-        <div class="code">
+        <div class="code-block">
           <code>
-            &#60;form&#62;<br>
-            <span class="tab">&#60;input type="text" id="short-txt" name="short-txt" value="un text court"&#62;</span><br>
+            &#60;<span class="code-blue">form</span>&#62;<br>
+            <span class="tab">&#60;<span class="code-blue">input</span> type="text" id="short-txt" name="short-txt" value="un text court"&#62;</span><br>
             <span class="tab">&#60;textarea id="long-txt" name="long-txt"&#62;Un texte long&#60;/textarea&#62;<br>
               &#60;/form&#62;</span><br>
               <span class="comment">//---------------</span><br>
