--- a/site/lexique.html
+++ b/site/lexique.html
@@ -17,12 +17,40 @@
   <main>
     <section class="bgc-section">
       <article>
-        <h3 class="letterMaj"><b>D</b></h3>
+        <h3 class="letter-maj">C</h3>
+        <p>
+          <dl>
+            <dt id="cdn"><strong>CDN (Content Delivery Network)</strong> 
+              <cite><a href="../site/001-Front-end/jquery.html#cdn">vers jquery</a></cite>
+            </dt>
+            <dd>Il s'agit d'un réseau d'ordinateurs qui coopèrent afin de mettre à disposition du contenu ou des données 
+              à des utilisateurs.
+            </dd>
+          </dl>
+        </p>
+      </article>
+      <article>
+        <h3 class="letter-maj"><b>D</b></h3>
         <p>
           <a class="lexLink" href="001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/progEvent.html#dom" 
             target="_blank">
             <strong>DOM</strong>
           </a>
+        </p>
+      </article>
+      <article>
+        <h3 class="letter-maj"><b>M</b></h3>
+        <p>
+          <dl>
+            <dt id="minified"><strong>Minified (<em>file</em>)</strong> 
+              <cite><a href="../site/001-Front-end/jquery.html#minified">vers jquery</a></cite>
+            </dt>              
+              <dd>
+                A la différence d'un fichier classique, le contenu d'un fichier minifié a été modifié. Les données n'ont
+                essentielles à la bonne exécution du code telles que les espaces, les sauts de ligne, et les 
+                commentaires ont été supprimées. Ce type de fichier est moins volumineux et plus rapide à charger.
+              </dd>
+            </dl>
         </p>
       </article>
     </section>
