--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="container">
   <header class="bgc-header">
-    <nav aria-label="Breadcrumb" class="flex-end">
+    <nav aria-label="Breadcrumb" class="nav-header flex-end">
       <ul class="breadcrumb">
         <li class="active">Accueil</li>
         <li><a href="site/liens-utiles.html">Liens utiles</a></li>
