--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <main class="bgc-main margin-content">
-    <section class="card nav-summary txt-center">
+    <section class="content-section nav-summary txt-center">
       <h1 class="title-h1">Plan</h1>
       <!-- <img class="img-logo" src="site/images/code.jpg" alt="Code"> -->
       <nav>
