Add jquery.html and arrow-right.png files.

--- a/site/001-Front-end/jquery.html
+++ b/site/001-Front-end/jquery.html
@@ -12,14 +12,10 @@
     <nav aria-label="Fil d'ariane" class="nav-header">
       <ul class="breadcrumb">
         <li>
-          <a class="" href="../001-Front-end/MainMenuFrontEnd.html">
+          <a href="../001-Front-end/MainMenuFrontEnd.html">
             <img class="arrow-left vert-align" src="../images/arrow-left.png" alt="Retour vers Front-end">
           </a></li>
         <li class="active">jQuery</li>
-        <!-- <li><a href="site/liens-utiles.html">Liens utiles</a></li>
-        <li><a href="site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li><a href="#">Back-end</a></li>
-        <li><a href="site/003-Git_et_Github/mainMenuGit.html">Git et Github</a></li> -->
       </ul>
     </nav>
   </header>
@@ -176,8 +172,27 @@
     <section>
       <nav class="nav-footer">
         <h3 class="social">Social</h3>
-        <ul>
-          <li><a href="https://friconix.com/" title="Icones Friconix">Friconix</a></li>
+        <ul class="logo">
+          <li> 
+            <svg class="logo-friconix" role="img" xmlns="http://www.w3.org/2000/svg" 
+              width="1000mm" height="1000mm" 
+              viewBox="0 0 1000 1000" >
+              <path id="path" fill="currentColor" 
+                d="M 75 0C 75 0 75 0 75 0C 33 0 0 33 0 75C 0 75 0 925 0 925C 0 967 33 1000 75 1000C 75 1000 925 1000 925 1000C 967 1000 1000 967 1000 925C 1000 925 1000 75 1000 75C 1000 33 967 0 925 0C 925 0 75 0 75 0 M 809 146C 826 146 847 160 876 174C 926 199 901 225 876 274C 851 324 825 300 776 274C 725 250 750 225 776 174C 786 153 797 146 809 146C 809 146 809 146 809 146M 400 150C 400 150 576 150 576 150C 701 150 701 300 576 300C 576 300 400 300 400 300C 301 300 251 350 251 450C 251 450 251 750 251 750C 251 874 101 874 101 750C 101 750 101 450 101 450C 101 275 226 150 400 150C 400 150 400 150 400 150M 826 331C 863 331 901 362 901 424C 901 424 901 750 901 750C 901 874 751 874 751 750C 751 750 751 424 751 424C 751 362 788 331 826 331C 826 331 826 331 826 331M 376 424C 376 424 576 424 576 424C 701 424 701 574 576 574C 576 574 376 574 376 574C 251 574 251 424 376 424C 376 424 376 424 376 424" transform="">
+              </path>
+            </svg>
+            <a href="https://friconix.com/" target="_blank" title="Vers Friconix">Friconix</a>
+          </li>
+          <li> 
+            <svg class="logo-friconix" role="img" xmlns="http://www.w3.org/2000/svg" 
+              width="1000mm" height="1000mm" 
+              viewBox="0 0 1000 1000" >
+              <path id="path" fill="currentColor" 
+                d="M 75 0C 75 0 75 0 75 0C 33 0 0 33 0 75C 0 75 0 925 0 925C 0 967 33 1000 75 1000C 75 1000 925 1000 925 1000C 967 1000 1000 967 1000 925C 1000 925 1000 75 1000 75C 1000 33 967 0 925 0C 925 0 75 0 75 0 M 809 146C 826 146 847 160 876 174C 926 199 901 225 876 274C 851 324 825 300 776 274C 725 250 750 225 776 174C 786 153 797 146 809 146C 809 146 809 146 809 146M 400 150C 400 150 576 150 576 150C 701 150 701 300 576 300C 576 300 400 300 400 300C 301 300 251 350 251 450C 251 450 251 750 251 750C 251 874 101 874 101 750C 101 750 101 450 101 450C 101 275 226 150 400 150C 400 150 400 150 400 150M 826 331C 863 331 901 362 901 424C 901 424 901 750 901 750C 901 874 751 874 751 750C 751 750 751 424 751 424C 751 362 788 331 826 331C 826 331 826 331 826 331M 376 424C 376 424 576 424 576 424C 701 424 701 574 576 574C 576 574 376 574 376 574C 251 574 251 424 376 424C 376 424 376 424 376 424" transform="">
+              </path>
+            </svg>
+            <a href="#">Friconix</a>
+          </li>
         </ul>
       </nav>
     </section>
