Update all the site.

--- a/site/001-Front-end/jquery.html
+++ b/site/001-Front-end/jquery.html
@@ -10,11 +10,15 @@
 <body class="container">
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
+      <div>
+        <a href="../001-Front-end/MainMenuFrontEnd.html">
+          <img class="arrow-left vert-align" src="../images/arrow-left.png">
+        </a>
+        <img class="arrow-left vert-align" src="../images/arrow-right.png">
+      </div>
       <ul class="breadcrumb">
-        <li>
-          <a href="../001-Front-end/MainMenuFrontEnd.html">
-            <img class="arrow-left vert-align" src="../images/arrow-left.png" alt="Retour vers Front-end">
-          </a></li>
+        <li><a href="../../index.html">Accueil</a></li>
+        <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li class="active">jQuery</li>
       </ul>
     </nav>
