Update all the site.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,14 @@
       <ul class="breadcrumb">
         <li class="active">Accueil</li>
         <li><a href="site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li><a href="#">Back-end</a></li>
+        <li><a href="site/005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
         <li><a href="site/lexique.html">Lexique</a></li>
       </ul>
     </nav>
   </header>
-  <main class="bgc-main margin-content">
-    <section class="content-section nav-summary txt-center">
+  <main>
+    <section class="content-section">
       <h1 class="title-h1">Plan</h1>
-      <!-- <img class="img-logo" src="site/images/code.jpg" alt="Code"> -->
       <nav>
         <ul>
           <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
