--- a/site/001-Front-end/MainMenuFrontEnd.html
+++ b/site/001-Front-end/MainMenuFrontEnd.html
@@ -14,20 +14,20 @@
         <a href="../../index.html">
           <img class="arrow-left vert-align" src="../images/arrow-left.png">
         </a>
-        <a href="#">
+        <a href="../005-Back-end/MainMenuBackEnd.html">
           <img class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
         </a>
       </div>
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
         <li class="active">Front-end</li>
-        <li><a href="#">Back-end</a></li>
+        <li><a href="../005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
         <li><a href="../lexique.html">Lexique</a></li>
       </ul>
     </nav>
   </header>
-  <main class="bgc-main margin-content">
-    <section class="card nav-summary txt-center">
+  <main>
+    <section class="content-section">
       <nav>
         <section>
           <h1 class="title-h1">Front-End</h1>
