--- a/site/005-Back-end/MainMenuBackEnd.html
+++ b/site/005-Back-end/MainMenuBackEnd.html
@@ -11,26 +11,26 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../../index.html">
+        <a href="../001-Front-end/MainMenuFrontEnd.html">
           <img class="arrow-left vert-align" src="../images/arrow-left.png">
         </a>
-        <a href="#">
+        <a href="../lexique.html">
           <img class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
         </a>
       </div>
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
-        <li class="active">Front-end</li>
-        <li><a href="#">Back-end</a></li>
+        <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <li class="active">Back-end</li>
         <li><a href="../lexique.html">Lexique</a></li>
       </ul>
     </nav>
   </header>
-  <main class="bgc-main margin-content">
-    <section class="card nav-summary txt-center">
+  <main>
+    <section class="content-section">
       <nav>
         <section>
-          <h1 class="title-h1">Front-End</h1>
+          <h1 class="title-h1">Back-End</h1>
         </section>
         <ul>
           <li><a href="../01-HTML5_et_CSS3/MainMenuHtmlCss.html">HTML5 et CSS3</a></li>
