--- a/site/lexique.html
+++ b/site/lexique.html
@@ -12,7 +12,7 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="#">
+        <a href="../site/005-Back-end/MainMenuBackEnd.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-left.png">
         </a>
         <a href="#">
@@ -22,13 +22,13 @@
       <ul class="breadcrumb">
         <li><a href="../index.html">Accueil</a></li>
         <li><a href="../site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li><a href="#">Back-end</a></li>
+        <li><a href="../site/005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
         <li class="active">Lexique</a></li>
       </ul>
     </nav>
   </header>
   <main>
-    <section class="bgc-section">
+    <section class="content-section">
       <article>
         <h3 class="letter-maj">C</h3>
         <p>
@@ -45,7 +45,7 @@
       <article>
         <h3 class="letter-maj"><b>D</b></h3>
         <p>
-          <a class="lexLink" href="001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/progEvent.html#dom" 
+          <a href="001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/progEvent.html#dom" 
             target="_blank">
             <strong>DOM</strong>
           </a>
