Add basesJS.html file.

--- a/site/001-Front-end/MainMenuFrontEnd.html
+++ b/site/001-Front-end/MainMenuFrontEnd.html
@@ -33,8 +33,8 @@
           <h1 class="title-h1">Front-End</h1>
         </section>
         <ul>
-          <li><a href="../01-HTML5_et_CSS3/MainMenuHtmlCss.html">HTML5 et CSS3</a></li>
-          <li><a href="initProgJSMenu2.html">Initiation à la programmation Javascript</a></li>
+          <li><a href="#">HTML5 et CSS3</a></li>
+          <li><a href="02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">Javascript</a></li>
           <li>
             <a href="../001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">Dynamiser vos sites web avec 
               Javascript
