--- a/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html
+++ b/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html
@@ -29,30 +29,12 @@
         <h2 class="sub-title-h2">Sommaire</h2>
         <ul class="ul-p17 li-empty">
           <li>
-            <a href="basesJS.html">Les bases</a>
+            <a href="basesJS.html">Les bases JavaScript</a>
           </a>
           </li>
           <li>
-            <a href="les-dates.html">Dynamiser son site web</a>
+            <a href="#">Dynamiser son site web</a>
           </a>
-          </li>
-          <li>
-            <a href="les-dates.html">Les dates</a>
-          </li>
-          <li>
-            <a href="objet-js.html">Les objets JavaScript</a>
-          </li>
-          <li>
-            <a href="variable_vs_valeurs.html">Variable versus valeur</a>
-          </li>
-          <li>
-            <a href="gestion_bug.html">Gestion des bugs : stratégies générales</a>
-          </li>
-          <li>
-            <a href="testUnitFonc.html">Les notions de test unitaire et test fonctionnel</a>
-          </li>
-          <li>
-            <a href="ouverturePython.html">Ouverture vers un autre langage de programmation : Python</a>
           </li>
         </ul>
       </section>
