--- a/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/basesJS.html
+++ b/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/basesJS.html
@@ -4,39 +4,52 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../001-Front-end/MainMenuFrontEnd.html">
-          <img class="arrow-left vert-align" src="../images/arrow-left.png">
+        <a href="MainMenuJavaScript.html">
+          <img class="arrow-left vert-align" src="../../images/arrow-left.png">
         </a>
-        <a href="../lexique.html">
-          <img class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
-        </a>
+        <img class="arrow-left vert-align" src="../../images/arrow-right.png" alt="Retour vers Front-end">
       </div>
       <ul class="breadcrumb">
-        <li><a href="../../index.html">Accueil</a></li>
-        <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li class="active">Back-end</li>
-        <li><a href="../lexique.html">Lexique</a></li>
+        <li><a href="../../../index.html">Accueil</a></li>
+        <li><a href="../MainMenuFrontEnd.html">Front-end</a></li>
+        <li><a href="MainMenuJavaScript.html">JavaScript</a></li>
+        <li class="active">Les bases JavaScript</li>
       </ul>
     </nav>
   </header>
   <main>
-    <section class="content-section">
-      <nav>
-        <section>
-          <h1 class="title-h1">Back-End</h1>
-        </section>
+    <nav>
+      <section class="content-section">
+        <h2 class="title-h2">Sommaire</h2>
         <ul>
-          <li></li>
+          <li>
+            <a href="les-dates.html">Les dates</a>
+          </li>
+          <li>
+            <a href="objet-js.html">Les objets JavaScript</a>
+          </li>
+          <li>
+            <a href="variable_vs_valeurs.html">Variable versus valeur</a>
+          </li>
+          <li>
+            <a href="gestion_bug.html">Gestion des bugs : stratégies générales</a>
+          </li>
+          <li>
+            <a href="testUnitFonc.html">Les notions de test unitaire et test fonctionnel</a>
+          </li>
+          <li>
+            <a href="ouverturePython.html">Ouverture vers un autre langage de programmation : Python</a>
+          </li>
         </ul>
-        </nav>
-    </section>
+      </section>
+    </nav>
   </main>
   <footer class="bgc-footer">
     <section>
