--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -17,7 +17,7 @@
         <img class="arrow-left vert-align" src="../site/images/arrow-right.png" alt="Retour vers Front-end">
       </div>
       <ul class="breadcrumb">
-        <li><a href="../index.html">Accueil</a></li>
+        <li><a href="../../index.html">Accueil</a></li>
         <li class="active">Liens utiles</li>
       </ul>
     </nav>
