--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -11,13 +11,13 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../../index.html">
+        <a href="../index.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-left.png">
         </a>
         <img class="arrow-left vert-align" src="../site/images/arrow-right.png" alt="Retour vers Front-end">
       </div>
       <ul class="breadcrumb">
-        <li><a href="../../index.html">Accueil</a></li>
+        <li><a href="../index.html">Accueil</a></li>
         <li class="active">Liens utiles</li>
       </ul>
     </nav>
