--- a/site/005-Back-end/MainMenuBackEnd.html
+++ b/site/005-Back-end/MainMenuBackEnd.html
@@ -14,7 +14,7 @@
         <a href="../001-Front-end/MainMenuFrontEnd.html">
           <img class="arrow-left vert-align" src="../images/arrow-left.png">
         </a>
-        <a href="../lexique.html">
+        <a href="../liens-utiles.html">
           <img class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
         </a>
       </div>
@@ -22,6 +22,7 @@
         <li><a href="../../index.html">Accueil</a></li>
         <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li class="active">Back-end</li>
+        <li><a href="../liens-utiles.html">Liens utiles</a></li>
         <li><a href="../lexique.html">Lexique</a></li>
       </ul>
     </nav>
