--- a/site/lexique.html
+++ b/site/lexique.html
@@ -12,10 +12,10 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../site/005-Back-end/MainMenuBackEnd.html">
+        <a href="liens-utiles.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-left.png">
         </a>
-        <a href="#">
+        <a href="../index.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-right.png" alt="Retour vers Front-end">
         </a>
       </div>
@@ -23,6 +23,7 @@
         <li><a href="../index.html">Accueil</a></li>
         <li><a href="../site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="../site/005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
+        <li><a href="liens-utiles.html">Liens utiles</a></li>
         <li class="active">Lexique</a></li>
       </ul>
     </nav>
