--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -11,14 +11,19 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../index.html">
+        <a href="005-Back-end/MainMenuBackEnd.html">
           <img class="arrow-left vert-align" src="../site/images/arrow-left.png">
         </a>
-        <img class="arrow-left vert-align" src="../site/images/arrow-right.png" alt="Retour vers Front-end">
+        <a href="lexique.html">
+          <img class="arrow-left vert-align" src="../site/images/arrow-right.png">
+        </a>
       </div>
       <ul class="breadcrumb">
         <li><a href="../index.html">Accueil</a></li>
+        <li><a href="../site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <li><a href="../site/005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
         <li class="active">Liens utiles</li>
+        <li><a href="lexique.html">Lexique</a></li>
       </ul>
     </nav>
   </header>
