--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <img class="arrow-left vert-align" src="site/images/arrow-left.png">
+        <a href="site/lexique.html">
+          <img class="arrow-left vert-align" src="site/images/arrow-left.png">
+        </a>
         <a href="site/001-Front-end/MainMenuFrontEnd.html">
           <img class="arrow-left vert-align" src="site/images/arrow-right.png">
         </a>
@@ -21,6 +23,7 @@
         <li class="active">Accueil</li>
         <li><a href="site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="site/005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
+        <li><a href="site/liens-utiles.html">Liens utiles</a></li>
         <li><a href="site/lexique.html">Lexique</a></li>
       </ul>
     </nav>
@@ -30,11 +33,11 @@
       <h1 class="title-h1">Plan</h1>
       <nav>
         <ul>
-          <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
           <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Front-End</a></li>
           <li><a href= "site/005-Back-end/MainMenuBackEnd.html">Back-End</a></li>
           <li><a href= "site/003-Git_et_Github/git.html">Git et Github</a></li>
           <li><a href= "site/002-Developpeur_PHP_Symfony/02-Decouvrir_la_programmation/decouvProg.html">Découvrir la programmation</a></li>
+          <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
           <li><a href= "site/lexique.html">lexique</a></li>
         </ul>
       </nav>
