--- a/site/001-Front-end/MainMenuFrontEnd.html
+++ b/site/001-Front-end/MainMenuFrontEnd.html
@@ -22,6 +22,7 @@
         <li><a href="../../index.html">Accueil</a></li>
         <li class="active">Front-end</li>
         <li><a href="../005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
+        <li><a href="../liens-utiles.html">Liens utiles</a></li>
         <li><a href="../lexique.html">Lexique</a></li>
       </ul>
     </nav>
