Update liens-utiles.html file.

--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -45,6 +45,7 @@
           <li><a href="https://www.opquast.com/" target="_blank">Certification Opquast (Rendre le web meilleur)</a></li>
           <li><a href="https://www.lafabriquedunet.fr/thematique/cahier-charges-site-web/" target="_blank">La fabrique du Net</a></li>
           <li><a href="../site/ressources/LaFabriqueduNet_Cahier_des_charges_de_site_internet.docx" target="_blank">Modèle de CdC de La fabrique du Net</a></li>
+          <li><a href="https://friconix.com/" target="_blank">Friconix (icônes gratuites)</a></li>
         </ul>
       </nav>
     </section>
